--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,8 @@ a{
 }
 p{
 	color: #333333;
-	font: 12px/24px Arial,Helvetica,sans-serif;
+	font-size: 12px;
+	font-family: Arial,Helvetica,sans-serif;
     margin: 8px 0;
     padding: 5px 15px;
     text-align: justify;
