--- a/asserts/css/site_css/stylesheet2.css
+++ b/asserts/css/site_css/stylesheet2.css
@@ -317,7 +317,10 @@ outline: 0 none;
 .menu_left li:hover { background-image: url(../../new_images/hover.png); background-repeat: repeat-x; } 
 
 .menu_left li a:active, .menu_left li a.active { background-image: url(../../new_images/act-bg.png); background-repeat: repeat-x; }
-
+.menu_left li.active {
+    background-image: url(../../new_images/act-bg.png); 
+    background-repeat: repeat-x;
+}
 .menu_left li:hover ul { display: block; }
 
 .menu_left li ul li { -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-right-colors: none; -moz-border-top-colors: none; border-color: #888888 -moz-use-text-color -moz-use-text-color; border-image: none; border-right: 0 none; border-style: solid none none; border-width: 1px 0 0; float: none; }
